# i-fake

./: .env.example  .gitignore  README.md  chrome-debug.sh  pyproject.toml
src/i_fake/: __init__.py  browser.py  cli.py  config.py  models.py  orchestrator.py  persona.py  planner.py
src/i_fake/ai/: __init__.py  anthropic_provider.py  gemini_provider.py  local_provider.py  openai_provider.py  prompts.py  provider.py
src/i_fake/utils/: __init__.py  human_sim.py  logger.py
tests/: test_core.py
