[tool.poetry]
name = "i-fake"
version = "0.1.0"
description = "AI-powered fake traffic generator to obfuscate ad-tracking profiles"
authors = []
readme = "README.md"
packages = [{include = "i_fake", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.44"
playwright-stealth = "^2.0"
pydantic = "^2.7"
pydantic-settings = "^2.3"
openai = "^1.30"
anthropic = "^0.27"
typer = {extras = ["all"], version = "^0.15"}
apscheduler = "^3.10"
httpx = "^0.27"
python-dotenv = "^1.0"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"

[tool.poetry.scripts]
i-fake = "i_fake.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
